# cairo-gl-sdl2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: SDL2.hpp  cli-benchmark.cpp  main.cpp  sdl-example.cpp
src/common/: SDL2.hpp  timediff.hpp
