PROJECT(cairo-gl-sdl2)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS "-W -Wall -Wno-unused-parameter -Werror -O3 -std=c++11")

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(CAIRO REQUIRED cairo)
PKG_CHECK_MODULES(SDL2 REQUIRED sdl2)

INCLUDE_DIRECTORIES(
	${CAIRO_INCLUDE_DIRS}
	${SDL2_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
	${CAIRO_LIBRARY_DIRS}
	${SDL2_LIBRARY_DIRS}
)

ADD_EXECUTABLE(cairo-gl-sdl2 "src/main.cpp")

TARGET_LINK_LIBRARIES(cairo-gl-sdl2
	${CAIRO_LIBRARIES}
	${SDL2_LIBRARIES}
)

