PROJECT(cairo-gl-sdl2)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS "-W -Wall -Wno-unused-parameter -Werror -O3 -std=c++11")

FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(CAIRO REQUIRED cairo)
PKG_CHECK_MODULES(SDL2 REQUIRED sdl2)

INCLUDE_DIRECTORIES(
	${OPENGL_INCLUDE_DIR}
	${CAIRO_INCLUDE_DIRS}
	${SDL2_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
	${CAIRO_LIBRARY_DIRS}
	${SDL2_LIBRARY_DIRS}
)

ADD_EXECUTABLE(cli-benchmark "src/cli-benchmark.cpp")
ADD_EXECUTABLE(sdl-example "src/sdl-example.cpp")

TARGET_LINK_LIBRARIES(cli-benchmark
	${OPENGL_LIBRARIES}
	${CAIRO_LIBRARIES}
	${SDL2_LIBRARIES}
)

TARGET_LINK_LIBRARIES(sdl-example
	${OPENGL_LIBRARIES}
	${CAIRO_LIBRARIES}
	${SDL2_LIBRARIES}
)

